--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    min-height: 100vh;
+    background: linear-gradient(to bottom, #1f222b, #17171a);
+    font-size: 0.97rem;
+    color: #fff;
+  }
